--- a/bardot.html
+++ b/bardot.html
@@ -197,7 +197,7 @@
 <!--     <p class="block-in">
       All the other pages: Order Details/Management, Account Management, Settings, etc.
     </p> -->
-      <img alt="user flow" class="screenCollage block-in" src="./Assets/bardot-collage.png" />
+      <img alt="Bardot Screen Mockups" class="screenCollage block-in" src="./Assets/bardot-collage.png" />  
 </div>
 
 
