--- a/heineken.html
+++ b/heineken.html
@@ -167,14 +167,12 @@
 
 </section>
 
-<section class="light-bg-f9f9f9" id="heineken-screenCollage">
+<div class="wrapper big-col light-bg-f9f9f9" id="heineken-screenCollage">
   <h4 class="block-in">The Rest</h4>
   <p>Other major & minor flows/twists</p>
 
-  <div class="block-in">
-    <img alt="user flow" src="./Assets/DOT_collage.png" />
-  </div>
-</section>
+    <img alt="Heineken App Screens" class="screenCollage block-in" src="./Assets/DOT_collage.png" />
+</div>
 
 
 
