--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -83,7 +83,7 @@
         <p>
           <strong><u>Concept:</u></strong> a personalised, inclusive, accessible healthcare system that helps managing symptoms and diseases. Not just a symptom checker, it aims to provide transparency in diagnostic and inform users about their conditions
            <br />
-          <strong><u>Deliverables</u></strong> conceptualisation, experimental design, app mockup
+          <strong><u>Deliverables:</u></strong> conceptualisation, experimental design, app mockup
         </p>
       </div>
   </div>
