--- a/credits.html
+++ b/credits.html
@@ -71,6 +71,7 @@
   <a href="https://www.flaticon.com/"                 title="Flaticon">Flaticon</a>
   <a href="http://www.freepik.com">Freepik</a>
   <a href="http://www.freepik.com">rawpixel.com / Freepik</a>
+  <a href="https://www.freepik.com/free-vector/retro-instagram-stories_8849038.htm#query=mockup%20phone&position=18&from_view=search&track=ais&uuid=10a3a162-61de-46b1-a1bb-4eeb42cbdb6b">Image by coolvector on Freepik</a>
   <a href="https://www.pexels.com/photo/photo-of-a-man-in-white-long-sleeved-top-on-blue-and-white-pop-up-camper-753603/">Pexels</a>
 
 
@@ -137,9 +138,10 @@
   <small class="copyright">	&#169; 2019 NHUT H. DON</small>
   <div class="footer-links">
     <a href="./index.html">Home</a>
-    <a href="./about.html">About</a>
     <a href="./works.html">Works</a>
+    <a href="./about.html">About</a>
     <a href="mailto:nhuthoangdon@gmail.com?Subject=Offer%20for%20Nhut">Contact</a>
+    <a style="color: #F3425E; font-weight: 800;">Credits</a>
   </div>
 
 </footer>
