--- a/about.html
+++ b/about.html
@@ -4351,6 +4351,7 @@
   <div class="footer-links">
     <a href="./index.html">Home</a>
     <a href="./works.html">Works</a>
+    <a style="color: #F3425E; font-weight: 800;">About</a>
     <a href="mailto:nhuthoangdon@gmail.com?Subject=Offer%20for%20Nhut">Contact</a>
     <a href="./credits.html">Credits</a>
   </div>
