--- a/works.html
+++ b/works.html
@@ -283,6 +283,7 @@
   <small class="copyright">	&#169; 2019 NHUT H. DON</small>
   <div class="footer-links">
     <a href="./index.html">Home</a>
+    <a style="color: #F3425E; font-weight: 800;">Works</a>
     <a href="./about.html">About</a>
     <a href="mailto:nhuthoangdon@gmail.com?Subject=Offer%20for%20Nhut">Contact</a>
     <a href="./credits.html">Credits</a>
