--- a/heineken.html
+++ b/heineken.html
@@ -169,7 +169,7 @@
 
 <div class="wrapper big-col light-bg-f9f9f9" id="heineken-screenCollage">
   <h4 class="block-in">The Rest</h4>
-  <p>Other major & minor flows/twists</p>
+  <p>Other major & minor flows/twists including account management, incentive management, stock management, and more</p>
 
     <img alt="Heineken App Screens" class="screenCollage block-in" src="./Assets/DOT_collage.png" />
 </div>
