--- a/bardot.html
+++ b/bardot.html
@@ -116,7 +116,7 @@
     <div class="block small-block">
       <h4 class="block-in">SEARCH SUGGESTION</h4>
       <p class="block-in">
-        Search Suggestion strategy that offered visual and textual hints that aligned with the marketing agenda, influencing user decisions
+        Analysed common keywords and search behaviours of targeted end users and designed a search suggestion strategy that offered visual and textual hints that aligned with the marketing agenda, while influencing user decisions
       </p>
     </div>
   </div>
