--- a/bardot.html
+++ b/bardot.html
@@ -149,7 +149,7 @@
     <div class="block">
       <h4 class="block-in">DROPDOWN MENU UI</h4>
       <p class="block-in">
-        Redesigned category taxonomy and UI enhancement on dropdown menu
+        Redesigned category taxonomy and enhanced dropdown menu's UI
       </p>
     </div>
 
