--- a/bardot.html
+++ b/bardot.html
@@ -164,7 +164,7 @@
     <div class="block small-block">
       <h4 class="block-in">Micro Interactions</h4>
       <p class="block-in">
-        UX/UI solutions for additional features and functions
+        UX/UI solutions for additional features and functions such as locating a relevant store, lookbook, stock checker
       </p>
     </div>
     <div class="block big-block no-text-block block-in">
