--- a/sa.html
+++ b/sa.html
@@ -117,7 +117,7 @@
     <div class="block small-block block-in">
       <h4>Visual Design</h4>
       <p>
-        Visual design for graphic elements, created universal styling for distinguished categories
+        Visual design for graphic elements, created UI elements (colour schemes, iconography, etc.)
       </p>
     </div>
   </div>
