--- a/sa.html
+++ b/sa.html
@@ -141,7 +141,7 @@
     <div class="block small-block block-in">
       <h4>SEARCH Result</h4>
       <p>
-        Clear and simple display with intuitive filter and sort options
+        Designed clear and simple display with intuitive filter and sort options
       </p>
     </div>
   </div>
