--- a/sa.html
+++ b/sa.html
@@ -163,7 +163,7 @@
     <div class="block small-block block-in">
       <h4>Design guidelines</h4>
       <p>
-        Created UI guidelines and documentation for development, ensuring visual consistency in end product
+        Created standard elements and UI guidelines, ensuring visual consistency in end product
       </p>
     </div>
     <div class="block big-block no-text-block block-in">
