--- a/sa.html
+++ b/sa.html
@@ -176,7 +176,7 @@
       <img alt="eDM" class="appScreen" src="./Assets/sa-eDM.png" />
     </div>
     <div class="block small-block block-in">
-      <h4>Style Guide for additional materials (i.e. edms)</h4>
+      <h4>Created additional materials (e.g. edms)</h4>
     </div>
   </div>
 
