--- a/heineken.html
+++ b/heineken.html
@@ -180,7 +180,7 @@
 
 
 <section class="other-works">
-  <h2>Other Works</h2>
+  <h2 class="block-in">Other Works</h2>
   <div class="work-tiles">
 
     <div class="work-tile block-in" >
