--- a/bardot.html
+++ b/bardot.html
@@ -179,7 +179,7 @@
     </div>
     <div class="block small-block">
       <h4 class="block-in">Visual Design</h4>
-      <p class="block-in">Visual design for product badges and other graphic elements</p>
+      <p class="block-in">Visual design for product badges and other UI elements</p>
     </div>
   </div>
 
