--- a/rr.html
+++ b/rr.html
@@ -131,7 +131,7 @@
 
 
 <section class="other-works">
-  <h2>Other Works</h2>
+  <h2 class="block-in">Other Works</h2>
   <div class="work-tiles">
 
     <div class="work-tile block-in" >
