Font update & animation amends

--- a/about.html
+++ b/about.html
@@ -18,7 +18,9 @@
   <meta name="theme-color" content="#ffffff">
 
 
-  <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,600,700,800|Lilita+One&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,900;1,900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="projectStyle.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -65,7 +67,7 @@
     <p>
       <!-- <strong>The Profession:</strong>  -->
       I have worked as a UX/UI designer for about 7 years, leveraging my undergrad in Multimedia. I also hold a Master's degree in Marine Science & Climate Change, driven by a profound passion for the Sea and marine organisms. Despite the apparent disparity in my background, I believe they provide numerous advantages in addressing a wide range of challenges in various fields of work.
-      My aspiration is to contribute to impactful projects that serve a great purpose, whether in the realm of digital services or natural sciences.
+      My career aspiration is to contribute to impactful projects with a good cause, whether in the realm of digital services or natural sciences
       <!-- <br />
       <br />
       <strong>The Me:</strong> I am a guaranteed team player at work, dog parent at home, and a loner on the road. -->
@@ -85,7 +87,7 @@
     <div class="portrait-cover">
       <p class="centered-text">
         <small>
-          <i>Nothing fancy here, just a stylistic pic of me (caution advised if you have trypophobia)</i>
+          <i>Nothing fancy here, just a stylistic pic of me (caution advised for those with trypophobia)</i>
         </small>
       </p>
       <div class="CTA-button" id="reveal-me-btn">
