--- a/credits.html
+++ b/credits.html
@@ -10,7 +10,9 @@
 <meta name="author" content="Nhut H. Don">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="https://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700,800|Lilita+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,900;1,900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" type="text/css" href="projectStyle.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -63,9 +65,9 @@
 <section id="credits">
   <h1>Credits</h1>
   <div class="wrapper">
-    <p>
+    <h4>
       Images / Icons:
-    </p>
+    </h4>
   </div>
 
   <a href="https://www.flaticon.com/"                 title="Flaticon">Flaticon</a>
@@ -76,9 +78,9 @@
 
 
   <div class="wrapper">
-    <p>
+    <h4>
       Js libraries & Plugins:
-    </p>
+    </h4>
   </div>
 
   <a href="https://greensock.com/gsap">GSAP</a>
