--- a/heineken.html
+++ b/heineken.html
@@ -10,7 +10,9 @@
   <meta name="author" content="Nhut H. Don">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,600,700,800|Lilita+One&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,900;1,900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="projectStyle.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -104,7 +106,7 @@
       <p>
         <strong><u>Task(s):</u></strong> 
         <br />
-        Optimise the Login and Registration process. Redesign the onboarding flows (Login, Register, Forgot Password) to be up to par with UX best practice. Refine UI to suit intended audience, mobile-first approach
+        To optimise Login and Registration process; redesign onboarding flows (Login, Register, Forgot Password), applying UX best practice; refine and enhance UI using mobile-first approach
         <!-- • Unfriendly Login/Registration process, scrambling information on a single screen <br />
         • Only supported traditional login with username and password <br />
         • No mobile optimisation <br />
@@ -112,7 +114,8 @@
         <br /><br />
         <strong><u>Approach(es):</u></strong> <br />
         • UX research (informal), constructed detailed flow diagram <br />
-        • Simplified steps, limited amount of information <br />
+        • Identified users' pain points of traditional onboarding <br />
+        • Simplified the experience, reduced taken steps, limited the amount of information displayed, eliminated distractions <br />
         • Phone number and OTP login/register integration <br>
         • Flexible input options <br />
         • Simple, lean UI, accommodating bigger text display <br />
@@ -129,7 +132,7 @@
     <div class="block no-margin-top block-in">
       <p>
         <strong><u>Task(s):</u></strong> <br/>
-        Redefine and amend complex order flows for consumers and distributors, ensuring consistency of orders between the audiences. Tailor/add functionalities for individual OpCos
+        To redefine and amend complex order flows (consumers and distributors), ensuring consistency and integrity between the flows; tailor/add functionalities for individual OpCos
         <!-- • Limited ordering experience (e.g. unclear, disorderly user flows, lack of functions) <br />
         • Compromised order/shopping cart logic due to confusing navigation flow <br /> -->
         <br /><br />
@@ -152,7 +155,7 @@
     <div class="block no-margin-top block-in">
       <p>
         <strong><u>Task(s):</u></strong> <br>
-        Update and refine order management flows on consumer and distributor interfaces. Tailor functionalities as per region requirements
+         To update and refine order management flows on consumer and distributor interfaces; tailor functionalities as per region requirements
         <br /> <br />
         <strong><u>Approach(es):</u></strong> <br>
         • Fine-tuned user flows <br>
@@ -169,7 +172,7 @@
 
 <div class="wrapper big-col light-bg-f9f9f9" id="heineken-screenCollage">
   <h4 class="block-in">The Rest</h4>
-  <p class="block-in">Other major & minor flows/twists including account management, incentive management, stock management, and more</p>
+  <p class="block-in">Responsible for the majority of management flows (account, incentive, stock, etc.) </p>
 
     <img alt="Heineken App Screens" class="screenCollage block-in" src="./Assets/DOT_collage.png" />
 </div>
