--- a/sa.html
+++ b/sa.html
@@ -10,7 +10,9 @@
   <meta name="author" content="Nhut H. Don">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,600,700,800|Lilita+One&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,900;1,900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="projectStyle.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -163,7 +165,7 @@
     <div class="block small-block block-in">
       <h4>Design guidelines</h4>
       <p>
-        Created standard elements and UI guidelines, ensuring visual consistency in end product
+        Created UI guidelines for development and standard samples (e.g. popups, forms, eDMs, additional contents), ensuring visual consistency across all pages
       </p>
     </div>
     <div class="block big-block no-text-block block-in">
@@ -171,14 +173,14 @@
     </div>
   </div>
 
-  <div class="wrapper odd light-bg-f9f9f9">
+  <!-- <div class="wrapper odd light-bg-f9f9f9">
     <div class="block no-text-block block-in">
       <img alt="eDM" class="appScreen" src="./Assets/sa-eDM.png" />
     </div>
     <div class="block small-block block-in">
       <h4>Created additional materials (e.g. edms)</h4>
     </div>
-  </div>
+  </div> -->
 
 </section>
 
