--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -10,7 +10,9 @@
   <meta name="author" content="Nhut H. Don">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700,800|Lilita+One&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,900;1,900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="projectStyle.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -78,12 +80,13 @@
   <div class="wrapper" id="schecker-intro">
     <div class="block">
       <h2>The Brief</h2>
+      <p>A startup project aiming to revolutionise the healthcare industry by acting as an all-in-one platform that connects patients and healthcare practitioners</p>
     </div>
       <div class="block">
         <p>
-          <strong><u>Concept:</u></strong> a personalised, inclusive, accessible healthcare system that helps managing symptoms and diseases. Not just a symptom checker, it aims to provide transparency in diagnostic and inform users about their conditions
-           <br />
-          <strong><u>Deliverables:</u></strong> conceptualisation, experimental design, app mockup
+          <strong><u>Concept:</u></strong> a personalised, inclusive, accessible healthcare system that helps analysing and managing symptoms and diseases, as well as serving as an assistant to both patients and doctors. Not just a symptom checker, the app provides transparency in diagnostic and educate users about their conditions, reducing unsafe or self-treating practices
+           <br /><br />
+          <strong><u>Deliverables:</u></strong> conceptualisation, experimental design, mockup & prototype
         </p>
       </div>
   </div>
