--- a/cv.html
+++ b/cv.html
@@ -122,17 +122,20 @@
       <h4>Languages</h4>
       <ul>
         <li><p>English - Full Professional</p></li>
-        <li><p>Spanish - Limited Working (learning B2)</p></li>
+        <li><p>Spanish - Limited Working (aspire to resume learning)</p></li>
+        <li><p>German - Elementary (aspire to resume learning)</p></li>
       </ul>
     </div>
 
     <div class="block">
       <h4>Notable Projects</h4>
-      <p>Major involvement in the design and development of:</p>
+      <p>Major involvements in the design of:</p>
       <ul>
-        <li><p><strong>Heineken B2B platform, Medical app startup, Bardot B2C eCommerce site, Standards Australia content website, <i> and other projects such as</i> Radio Rentals, ShaverShop, Meat & Livestock Australia (MLA), Integrity Systems (ISC), My7Christmas</strong></p></li>
+        <li><p><strong>Apps & Webapps:</strong> Heineken B2B platform, Medical app startup, BuyDesire app</p></li>
+        <li><p><strong>eCommerce:</strong> Bardot, Radio Rentals, ShaverShop, My7Christmas</p></li>
+        <li><p><strong>Content Websites:</strong> Standard Australia, Meat & Livestock Australia (MLA), Integrity Systems (ISC), MLA Weed Identifier micro site</p></li>
       </ul>
-      <p>→ Shaped UX/UI, created/maintained documentation, supported and ensured consistency in development</p>
+      <!-- <p>→ Shaped UX/UI, created/maintained documentation, supported and ensured consistency in development</p> -->
     </div>
 
   </div>
@@ -142,7 +145,7 @@
 
 
 <section class="cv-contents" id="timeline">
-  <h3>Experience</h3>
+  <h3>Professional Chronology</h3>
   <div class="timeline">
     <span class="tl-line"></span>
 
@@ -176,7 +179,7 @@
       <div class="time-mark"></div>
       <div class="achievemnents">
         <div>
-          <h6>M.A. Open Design <span><small><i>(withdrew)</i></small></span></h6>
+          <h6>M.A. Open Design <span><small><i>(withdrew to pursue Marine Science)</i></small></span></h6>
           <p><small>
             Humboldt-Universität zu Berlin (HU) <br />
             Universidad de Buenos Aires (UBA) <br />
@@ -191,12 +194,10 @@
       <div class="time-mark"></div>
       <div class="achievemnents">
         <div>
-          <h6>Freelance & Contractor Multimedia Designer</h6>
-          <p><small>Remotely</small></p>
+          <h6>Freelance & Contractor UX/UI Designer</h6>
+          <p><small><i>Remotely</i></small></p>
           <ul>
             <li>Provided consultant and digital design services</li>
-            <li>Managed and balanced multiple projects simutaneously</li>
-            <li>Collaborated with cross-functional teams and clients to ensure timely product delivery</li>
           </ul>
         </div>
       </div>
@@ -216,12 +217,7 @@
           <ul>
             <li>Produced wireframes, mockups, prototypes for Web/App&nbsp;products</li>
             <li>Promoted UX/UI&nbsp;solutions</li>
-            <li>Created and maintained product documentation (UI specs, styleguides, assets,&nbsp;etc.)</li>
-            <li>Collaborated with interdisciplinary & multinational teams and stakeholders to achieve optimal solutions and ensure product&nbsp;quality</li>           
-            <li>Tackled unfamiliar projects such as UX/UI design for petroleum refill apps and apps for POS&nbsp;devices</li>
-            <li>Liaised & coordinated projects between internal/external teams and&nbsp;stakeholders</li>
-            <li>Mentored junior team members and&nbsp;interns</li>
-            <li>Managed task delegation and provided oversight to UX/UI team to achieve project objectives</li>
+            <li>Managed design team</li>
           </ul>
         </div>
       </div>
@@ -238,9 +234,7 @@
             <i>Saigon, VN</i>
           </small></p>
           <ul>
-            <li>Optimised/prepared images & assets for web/app&nbsp;development</li>
-            <li>Assisted in UX/UI-related tasks</li>
-            <li>Designed company's intranet</li>
+            <li>Assisted with UX/UI and other graphic-related tasks</li>
           </ul>
         </div>
       </div>
@@ -272,7 +266,7 @@
   <h3>Contact Information</h3>
   <div class="blocks">
     <div class="block">
-      <h5>Email</h5>
+      <h5>Email <i>(Preferred method)</i></h5>
       <p>
         <a href="mailto:nhuthoangdon@gmail.com">nhuthoangdon@gmail.com</a>
       </p>
@@ -288,6 +282,9 @@
       <p>
         <a href="https://nhuthoangdon.github.io">nhuthoangdon.github.io</a>
       </p>
+      <br>
+      <h5>Whatsapp</h5>
+      <p>+350 54 090 757</p>
       <!-- <br />
       <h5>Current Location / Timezone</h5>
       <p>
