Updated to new font family & changed some wording

--- a/cv.html
+++ b/cv.html
@@ -8,7 +8,9 @@
   <meta name="author" content="Nhut H. Don">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700,800|Lilita+One&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,900;1,900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="cvStyle.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -94,7 +96,7 @@
       <ul>
         <li><p>Proficient in Figma, Sketch, InVision, Zeplin, and most software from the Adobe Creative Suite</p></li>
         <li><p>Strong foundational knowledge to pickup new tools if required</p></li>
-        <li><p>Working knowledge of HTML/CSS/JS</p></li>
+        <li><p>Working knowledge of HTML/CSS/JS (I coded my Portfolio from scratch)</p></li>
         <li><p>Professional experience with website and app development process</p></li>
         <li><p>Familiar working in an Agile/Scrum environment</p></li>
         <li><p>Ability to utilise multidisciplinary background and approaches to tackle various types of projects</p></li>
@@ -197,7 +199,9 @@
           <h6>Freelance & Contractor UX/UI Designer</h6>
           <p><small><i>Remotely</i></small></p>
           <ul>
-            <li>Provided consultant and digital design services</li>
+            <li>Provided consultant & digital design services</li>
+            <li>Created Schecker (+ another startup app)</li>
+            <li>Learned coding & Built Portfolio</li>
           </ul>
         </div>
       </div>
@@ -234,7 +238,7 @@
             <i>Saigon, VN</i>
           </small></p>
           <ul>
-            <li>Assisted with UX/UI and other graphic-related tasks</li>
+            <li>Assisted with UX/UI and graphic-related tasks</li>
           </ul>
         </div>
       </div>
