--- a/cv.html
+++ b/cv.html
@@ -199,7 +199,7 @@
           <h6>Freelance & Contractor UX/UI Designer</h6>
           <p><small><i>Remotely</i></small></p>
           <ul>
-            <li>Provided consultant & digital design services</li>
+            <li>Provided consulting & digital design services</li>
             <li>Created Schecker (+ another startup app)</li>
             <li>Learned coding & Built Portfolio</li>
           </ul>
