Schecker text updates

--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -109,7 +109,7 @@
 
     <div class="hiw-feature-desc">
       <p>
-        AI-employed symptom checker function, tailored questions for individual circumstances following same procedures as a real physician
+        An AI-powered symptom checker featuring tailored questions designed for individual circumstances, employing procedures and diagnostic reasoning akin to a real physician
       </p>
     </div>
   </div>
@@ -120,7 +120,7 @@
 
     <div class="hiw-feature-desc">
       <p>
-        Find, book, and manage appointments with relevant physicians/clinics. Assessment questionnaires and results will be sent to appointed doctor(s) upon confirmed bookings
+        User gets suggested relevant physicians/clinics in the partner network → choose preferred one → book and manage appointment through the app. Previous assessment questionnaire and result will be sent to the appointed doctor upon confirmed booking. Doctor may provide instructions (e.g. what to before medical tests) prior to appointment via app
       </p>
     </div>
 
@@ -147,7 +147,7 @@
 
     <div class="hiw-feature-desc">
       <p>
-        Keep track of diagnosed & undiagnosed symptoms/diseases together with their relevant medication/treatments 
+        Official diagnostic and test results from doctor visits booked through the app will be automatically uploaded to patient profile. Users can keep track of diagnosed & undiagnosed symptoms/diseases together with their relevant medication/treatments 
       </p>
     </div>
 
