--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="prj-des-contents">
           <h2 class="in-out-el">Heineken</h2>
             <p class="in-out-el">
-              UX optimisation & improvements • UI enhancements • New feature integrations • User flow redesign
+              Optimised & increased usability • Detangled user flows • Resolved user pain points
             </p>
           <!-- CTA -->
             <a class="CTA-button prj-CTA in-out-el" id="heineken-CTA" href="./heineken.html">
@@ -187,7 +187,7 @@
         <div class="prj-des-contents">
           <h2 class="in-out-el">Schecker</h2>
             <p class="in-out-el">
-              Conceptual design • Ideation • Vision • Prototyping
+              Identified real-world problems • Product creation
             </p>
           <!-- CTA -->
             <a class="CTA-button prj-CTA in-out-el" id="schecker-CTA" href="./scheckerIntro.html">
@@ -215,7 +215,7 @@
         <div class="prj-des-contents" id="prj-des-contents_bardot">
           <h2 class="in-out-el">Bardot</h2>
             <p class="in-out-el">
-              UX enhancements • Consumer site redesign
+              UX/UI enhancements to drive conversions
             </p>
           <!-- CTA -->
             <a class="CTA-button prj-CTA in-out-el" id="bardot-CTA" href="./bardot.html">
@@ -240,7 +240,7 @@
         <div class="prj-des-contents" id="prj-des-contents_rr">
           <h2 class="in-out-el">Radio Rentals</h2>
             <p class="in-out-el">
-              UX Optimisation
+              Simplified complex registration process • Eased user pain points
             </p>
           <!-- CTA -->
             <a class="CTA-button prj-CTA in-out-el" id="rr-CTA" href="./sa.html">
@@ -265,7 +265,7 @@
         <div class="prj-des-contents" id="prj-des-contents_sa">
           <h2 class="in-out-el">Standards Australia</h2>
             <p class="in-out-el">
-              Visual & UI Design
+              Visual design for effective communication
             </p>
           <!-- CTA -->
             <a class="CTA-button prj-CTA in-out-el" id="sa-CTA" href="./sa.html">
