--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
     <h2>About me</h2>
     <p>
       <!-- <strong>The Profession:</strong>  -->
-      I have worked as a UX/UI designer for about 7 years, leveraging my undergrad in Multimedia. I also hold a Master's degree in Marine Science & Climate Change, driven by a profound passion for the Sea and marine organisms. Despite the apparent disparity in my background, I believe they provide numerous advantages in addressing a wide range of challenges in various fields of work.
+      I have worked as a UX/UI designer for over 7 years, leveraging my undergrad in Multimedia. I also hold a Master's degree in Marine Science & Climate Change, driven by a profound passion for the Sea and marine organisms. Despite the apparent disparity in my background, I believe it provides numerous advantages in addressing a wide range of challenges in various fields of work.
       My career aspiration is to contribute to impactful projects with a good cause, whether in the realm of digital services or natural sciences
       <!-- <br />
       <br />
