--- a/heineken.html
+++ b/heineken.html
@@ -72,7 +72,7 @@
     <div class="block block-in">
       <h2>The Brief</h2>
       <p>
-        Improve current UX/UI and implement new features for the centralised B2B eCommerce platform, customisation for individual countries/OpCos within the APAC region
+        Identified UX/UI problems and user pain points, redesigned user flows, and created interfaces for new features for the centralised B2B platform, customising for individual countries/OpCos within the APAC region and optimising webapp and app versions
       </p>
     </div>
       <div class="block block-in">
@@ -92,7 +92,7 @@
   <h3>CHALLENGES</h3>
     <div class="block">
       <p>
-        Balancing stakeholder demands and system consistency, capacity, resources, and development efforts. Support & optimisation for older, non-tech-savvy audience (main users)
+        Balancing stakeholder demands and system consistency, capacity, resources, and development efforts. Potential complications & conflicts with existing builds. Support & optimisation for older, non-tech-savvy audience (main users)
       </p>
     </div>
 </section>
