--- a/index.html
+++ b/index.html
@@ -285,7 +285,21 @@
 
 <section class="flex-column" id="more-works">
   <!-- <h2 class="in-out-el" style="text-align: center;">A bit more to see, if you fancy</h2> -->
-  <a class="big-link in-out-el" href="./works.html" target="_blank"><h2>View the Miscellaneous</h2></a>
+  <h2 class="in-out-el">Other Projects</h2>
+  <div class="logos">
+    <img class="in-out-el logo" src="Assets/logo_my7.png">
+    <img class="in-out-el logo" src="Assets/logo_shavershop.png">
+    <img class="in-out-el logo" src="Assets/logo_oxford.png">
+    <img class="in-out-el logo" src="Assets/logo_taubmans.png">
+    <img class="in-out-el logo" src="Assets/logo_isc.svg">
+    <img class="in-out-el logo" src="Assets/logo_mla.png">
+    <img class="in-out-el logo" src="Assets/logo_safemeat.svg">
+    <img class="in-out-el logo" src="Assets/logo_expatla.png">
+    <img class="in-out-el logo" src="Assets/logo_freshfrom.png">
+
+
+  </div>
+  <a class="big-link in-out-el" href="./works.html" target="_blank"><h5>View the Miscellaneous</h5></a>
   <!-- <span class= "in-out-el" style="position: relative; bottom: -15vh"><p style="font-weight: 400; letter-spacing: .02em"><i>P.S. I also built this website from scratch using HTML5, CSS, and some JS libraries. Amateur, I know. But hey, it works :)</i></p></span> -->
 </section>
 
