Update with more logos

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
 
   </div>
-  <a class="big-link in-out-el" href="./works.html" target="_blank"><h5>View the Miscellaneous</h5></a>
+  <a class="big-link in-out-el" href="./works.html" target="_blank"><h5>View More</h5></a>
   <!-- <span class= "in-out-el" style="position: relative; bottom: -15vh"><p style="font-weight: 400; letter-spacing: .02em"><i>P.S. I also built this website from scratch using HTML5, CSS, and some JS libraries. Amateur, I know. But hey, it works :)</i></p></span> -->
 </section>
 
