--- a/heineken.html
+++ b/heineken.html
@@ -81,7 +81,7 @@
             B2B eCommerce, webapp & mobile app
            <br /><br />
           <strong>Deliverables</strong> <br />
-            Interactive mockups/prototypes
+            Interactive prototypes & mockups
         </p>
       </div>
   </div>
@@ -113,7 +113,8 @@
         • UX/UI revamps needed <br /> -->
         <br /><br />
         <strong><u>Approach(es):</u></strong> <br />
-        • UX research (informal), constructed detailed flow diagram <br />
+        • UX research based on trend and market reports <br />
+        • Constructed detailed flow diagram for all user flows <br />
         • Identified users' pain points of traditional onboarding <br />
         • Simplified the experience, reduced taken steps, limited the amount of information displayed, eliminated distractions <br />
         • Phone number and OTP login/register integration <br>
@@ -122,7 +123,7 @@
       </p>
     </div>
 
-    <img class="noShadow-img block-in" alt="Heineken DOT Onboarding Flow" src="./Assets/DOT_onboarding.jpg" />
+    <img class="noShadow-img block-in" id="heineken_onboarding_img" alt="Heineken DOT Onboarding Flow" src="./Assets/DOT_onboarding.jpg" />
   </div>
 
 
@@ -137,6 +138,7 @@
         • Compromised order/shopping cart logic due to confusing navigation flow <br /> -->
         <br /><br />
         <strong><u>Approach(es):</u></strong> <br />
+        • Investigated existing conflicts between user flows and assessed potential ones <br>
         • Redesigned user flows <br>
         • Identified and resolved discrepancies and incoherence between flows <br />
         • Enhanced checkout process & information hierachy <br />
@@ -158,8 +160,9 @@
          To update and refine order management flows on consumer and distributor interfaces; tailor functionalities as per region requirements
         <br /> <br />
         <strong><u>Approach(es):</u></strong> <br>
-        • Fine-tuned user flows <br>
-        • Ensured consistency between ordering flows and order management flows <br />
+        • Investigated existing conflicts betweens user flows of different user types <br>
+        • Redesigned all flows <br>
+        • Ensured consistency across user flows <br />
         • Revamped UI
       </p>
     </div>
@@ -172,7 +175,7 @@
 
 <div class="wrapper big-col light-bg-f9f9f9" id="heineken-screenCollage">
   <h4 class="block-in">The Rest</h4>
-  <p class="block-in">Responsible for the majority of management flows (account, incentive, stock, etc.) </p>
+  <p class="block-in">Designed various management flows for each user type (account, incentive, stock, etc.) </p>
 
     <img alt="Heineken App Screens" class="screenCollage block-in" src="./Assets/DOT_collage.png" />
 </div>
