Changed to dark theme: 1st page-Homepage. JS libraries updates. Homepage animation update (50%)

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="animated-icon" id="animated-icon">
       <svg width="78px" height="122px" viewBox="0 0 78 122" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-              <g id="Desktop-HD" transform="translate(-1041.000000, -277.000000)" fill="#FFFFFF" fill-rule="nonzero">
+              <g id="Desktop-HD" transform="translate(-1041.000000, -277.000000)" fill="#090909" fill-rule="nonzero">
                   <polygon class="ic-component" id="ic-component-7" points="1097 377 1119 377 1119 399 1097 399"></polygon>
                   <polygon class="ic-component" id="ic-component-6" points="1069 377 1091 377 1091 399 1069 399"></polygon>
                   <polygon class="ic-component" id="ic-component-5" points="1041 377 1063 377 1063 399 1041 399"></polygon>
@@ -110,8 +110,8 @@
 <section class="flex-row" id="home-intro">
  
  <div class="opening_line">
-  <h1 class="in-out-el" id="intro_text">G'day!</h1>
-  <span><h2 class="in-out-el" id="intro_sub_text">Welcome to my portfolio</h2></span>
+  <h1 class="in-out-el" id="intro_text">Hi, I'm Nhut</h1>
+  <span><h2 class="in-out-el" id="intro_sub_text">UX/UI/Product Designer</h2></span>
 </div>
 
     <!-- CTA arrow for next page -->
@@ -349,7 +349,7 @@
       <style>
         .cls-1 {
           fill: #fff;
-          stroke: #fff;
+          stroke: #000;
           stroke-miterlimit: 10;
           stroke-width: 2px;
         }
@@ -375,8 +375,8 @@
     <path class="cls-1" d="M462.44,250.95c-7.9,.1-15.9,.2-23.5,2.3-8,2.2-15.2,6.5-23.1,8.9-15,4.6-31.1,2.2-46.6-.3,5.6-7.2,11.9-13.8,18.8-19.7,2-1.7,4.1-3.4,6.6-4.4,8.8-3.5,18,3.1,27.1,5.8,9.3,2.8,19.3,1.6,28.9,.3,9.7-1.3,47.1-7.1,52.8-.5,8.7,10.1-33.5,7.5-41,7.6Z"/>
     <path class="cls-1" d="M573.54,213.25c-1.9,8.5-5.7,14.7-12.9,19.5-5.2,3.5-13.9,6.5-20,8-8,2-11.5,3.5-20,3-.8-.1-2.3-.6-3-1-.8-.4-2.3-2.1-2.7-2.9-4.3-8.3-6.4-19.5-.1-26.3,3.9-4.2,9.8-5.6,15.3-7.3,10.2-3.2,19.7-8.6,27.9-15.4,7.8-6.5,12.4-15.7,19.4-22.4,5.5,10.9-1.4,33.6-3.9,44.8Z"/>
     <path class="cls-1" d="M547.64,189.85c-4.7,3.5-14,8.9-18,10-21,6-18.6,11-22,11s-6.2-13.6-8.4-17.1c-2.2-3.6-2.7-8.1-.8-11.9,2.1-4.4,6.1-7.3,10.3-9.8,5.2-3.1,11.4-6,13.3-11.7,1.3-3.9,.3-8.2,.4-12.3,.1-4.1,2.1-8.9,6.1-9.6,1.6-.3,3.1,.4,4.7,.6,12.4,1.7,18.8,6.9,27.4,10.7,29,13.1-9,37.1-13,40.1Z"/>
-    <polygon class="cls-1" points="341.64 104.85 315.64 114.65 339.64 130.85 366.14 118.55 341.64 104.85"/>
-    <path class="cls-1" d="M342.64,109.85c-4.2-.9-9.5,1.7-10,6-.4,4,3.6,8,8,8s8.4-4,8-8c-.3-3.2-3.3-5.4-6-6Z"/>
+    <polygon class="cls-1" id="whale_1_eye_outer" points="341.64 104.85 315.64 114.65 339.64 130.85 366.14 118.55 341.64 104.85"/>
+    <path class="cls-1" id="whale_1_eye" d="M342.64,109.85c-4.2-.9-9.5,1.7-10,6-.4,4,3.6,8,8,8s8.4-4,8-8c-.3-3.2-3.3-5.4-6-6Z"/>
   </svg>
 
   <?xml version="1.0" encoding="UTF-8"?>
@@ -385,7 +385,7 @@
     <style>
       .cls-1 {
         fill: #fff;
-        stroke: #fff;
+        stroke: #000;
         stroke-miterlimit: 10;
         stroke-width: 2px;
       }
@@ -421,8 +421,8 @@
   <path class="cls-1" d="M33.85,229.68c-3,2.6-7,3.7-10.9,4.4-3.2,.6-6.6,1-9,3.2-3.9,3.6-3.1,10-.9,14.7,3.5,7.4,9.5,13.2,15.4,18.9,4,3.8,8,7.6,11.9,11.4,3,2.9,6.7,5.9,10.8,5.2,2-.4,3.8-1.7,5.1-3.3,6.2-7.2,4.8-18,2.7-27.3-2-8.6-4.4-17.2-7.2-25.6-1.1-3.5-2.4-7-5-9.6-9.2-9.1-8.3,4.1-12.9,8Z"/>
   <path class="cls-1" d="M40.35,168.08c-12.1,.8-24.7,5.1-32,14.8C.55,193.18,.25,207.18,1.65,219.98c.4,3.5,1,7.3,3.6,9.8,4.7,4.5,12.9,1.4,16.9-3.8s5.5-11.8,9.1-17.3c5.4-8.1,14.9-12.6,24.4-15.1,9.5-2.4,19.3-3.1,28.8-5.6,10.9-2.9,21.6-15.5,4.6-16.9-16-1.3-32.8-4-48.7-3Z"/>
   <path class="cls-1" d="M93.55,193.18c-12.7,4.5-26.7,4.5-38.8,10.3-1.7,.8-3.4,1.8-4.5,3.3-2.1,2.7-1.9,6.7-.5,9.8,1.4,3.2,3.7,5.8,5.7,8.5,10.2,13.6,14.1,31.8,10.4,48.4-.6,2.9-1.5,5.9-1.2,8.9,.5,4.2,3.7,8.1,7.7,9.3s8.8-.1,11.6-3.3c1.9-2.2,2.9-5.1,3.8-7.9,1.8-5.6,3.6-11.2,5.5-16.8,2.3-7,4.7-14.3,9.9-19.5,7.4-7.5,18.6-9.3,28.4-13.1,4.1-1.6,8.2-3.8,10.5-7.5,2.6-4.1,2.4-9.5,.6-14.1-1.8-4.5-5-8.3-8.4-11.8-6.4-6.5-14.1-12.6-23.1-14.8-5.1-1.3-6.7-1.3-9.3,1.7-2.9,3.6-3,6.7-8.3,8.6Z"/>
-  <polygon class="cls-1" points="233.95 193.98 212.05 207.98 230.75 224.98 257.05 209.98 233.95 193.98"/>
-  <path class="cls-1" d="M233.25,200.98c-4.5,.1-9,4-8.7,8.7,.3,4,3.9,6.8,7.4,7.4,5.5,1,11.2-3.5,9.9-9.9-.7-3.7-4.7-6.4-8.6-6.2Z"/>
+  <polygon class="cls-1" id="whale_2_eye_outer" points="233.95 193.98 212.05 207.98 230.75 224.98 257.05 209.98 233.95 193.98"/>
+  <path class="cls-1" id="whale_2_eye" d="M233.25,200.98c-4.5,.1-9,4-8.7,8.7,.3,4,3.9,6.8,7.4,7.4,5.5,1,11.2-3.5,9.9-9.9-.7-3.7-4.7-6.4-8.6-6.2Z"/>
 </svg>
 
 </div>
@@ -431,20 +431,38 @@
 
 
 <!-- ______________________________________________________________________________ -->
+
 <script src="https://cdn.jsdelivr.net/combine/npm/gsap@2,npm/jquery@3,npm/animejs@3,npm/page-scroll-to-id@1"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/TextPlugin.min.js"></script>
-<script src="./Scripts/TweenMax.min.js"></script>
-<script src="./Scripts/jquery.gsap.min.js"></script>
-<script src="./Scripts/gsap.min.js"></script>
-<script src="./Scripts/anime.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<script src="./Scripts/anime.min.js"></script>
+
 <script src="./Scripts/jquery.malihu.PageScroll2id.min.js"></script>
+
 <script type="text/javascript" src="./Scripts/myScript.js"></script>
 
+<!-- LATEST GSAP -->
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+<!-- GSAP Plugins (not all used) -->
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/Flip.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/Observer.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollToPlugin.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/Draggable.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/MotionPathPlugin.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/EaselPlugin.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/PixiPlugin.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script>
 
 
+<!-- RoughEase, ExpoScaleEase and SlowMo are all included in the EasePack file -->    
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/EasePack.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/CustomEase.min.js"></script>
 
+
+<!-- Backup Load from local files -->
+<script src="./Scripts/gsap-public/minified/gsap.min.js"></script>
+<script src="./Scripts/jquery.gsap.min.js"></script>
 
 </body>
 
